      * Added support for singular/plural discovery and translation.
      * Customized translations are tracked so your modifications can
        be identified and protected from translation update overwrites.
    * Improved content language support:
      * Freely orderable language selector in forms.
      * Made it possible to assign language to taxonomy terms, vocabularies
        and files.
    * Much improved language APIs for developers:
      * Added simple APIs and hooks to save/delete/update languages.
      * Unified database schemas and APIs to make it easier to spot where
        language codes are referenced.
      * Made the language negotiation system APIs more consistent for
        developers.
      * Made it possible for users to have a preferred language separate from
        their user entity language.
      * The text formatter from t() is now available as format_string().
      * Added support for interface translation contexts in Drupal.t() and
        Drupal.formatPlural() in JavaScript.
      * Removed textgroups support from interface translation in favor of
        native configuration language support.

Drupal 7.0, 2011-01-05
----------------------
- Database:
    * Fully rewritten database layer utilizing PHP 5's PDO abstraction layer.
    * Drupal now requires MySQL >= 5.0.15 or PostgreSQL >= 8.3.
    * Added query builders for INSERT, UPDATE, DELETE, MERGE, and SELECT queries.
    * Support for master/slave replication, transactions, multi-insert queries,
      and other features.
    * Added support for the SQLite database engine.
    * Default to InnoDB engine, rather than MyISAM, on MySQL when available.
      This offers increased scalability and data integrity.
- Security:
    * Protected cron.php -- cron will only run if the proper key is provided.
    * Implemented a pluggable password system and much stronger password hashes
      that are compatible with the Portable PHP password hashing framework.